# discord-latesheet-automate

./: .env.example  .gitignore  Dockerfile  README.md  manual_signins.json  pyproject.toml  requirements.txt  run_self_healing.py  test_run_mock.py
deploy/: lea-automation.service
src/: google_sheets.py
src/discord_bot/: __init__.py  bot.py  config.py  filter.py  handler.py
src/lea_automation/: config.py  logging_setup.py  main.py  orchestrator.py  sheets_writer.py  time_check.py
tests/: test_config.py  test_filter.py  test_google_sheets.py  test_manual_time.py  test_shifts.py  test_time_check.py
