[project]
name = "lea-automation"
version = "0.1.0"
description = "LEA Discord Late Attendance Automation"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.8",
    "gspread>=6.0",
    "google-auth>=2.27",
    "discord-py>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
lea-automation = "lea_automation.main:main"

[tool.setuptools.packages.find]
where = ["src"]
